--- a/ada-demo/src/App.css
+++ b/ada-demo/src/App.css
@@ -4,10 +4,17 @@
   margin: auto;
 }
 
-.container h1,
+.container h1 {
+  text-align: center;
+  padding: 0px 32px;
+}
 .container h3 {
   text-align: center;
   height: 40px;
+}
+
+.ant-form-item-label > label {
+  font-weight: 500;
 }
 
 .result {
